cluster/apps/default/novel-ai/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: novel-ai
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.217
    ports:
      - name: http
        port: 6969
        protocol: TCP
