cluster/apps/default/novel-ai/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: novel-ai
  namespace: default
spec:
  selector:
    app.kubernetes.io/instance: novel-ai
    app.kubernetes.io/name: novel-ai
    app.kubernetes.io/service: novel-ai
  externalName: 192.168.50.217
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 6969
  sessionAffinity: None
  type: ExternalName
