cluster/apps/default/novel-ai/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
  name: novel-ai
  namespace: default
spec:
  rules:
    - host: novel-ai.taugocauci.dev
      http:
        paths:
          - backend:
              service:
                name: novel-ai
                port:
                  number: 6969
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - novel-ai.taugocauci.dev
      secretName: novel-ai-tls
